--- a/layouts/partials/menu-footer.html
+++ b/layouts/partials/menu-footer.html
@@ -10,7 +10,7 @@
     <br>
     <br>
         <b> Last Updated </b> <br>
-        <i><font color=orange>06-03-2024</font></i>
+        <i><font color=orange>04-04-2025</font></i>
     </left>
     <left>
         <br>
@@ -18,7 +18,7 @@
             <b> Team </b> <br>
            
             <i> <a href="https://www.linkedin.com/in/jotaguy"  style="color:orange">Gia Hưng </a> <br>
-                <a href="https://www.linkedin.com/in/holehuy/"  style="color:orange">Hồ Lê Huy </a>
+                <a href="https://www.linkedin.com/in/holehuy/"  style="color:orange">Xuân AnAn </a>
                 
                
         </i>
